--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,10 @@ dependencies {
     //Dagger2
     implementation "com.google.dagger:dagger:$rootProject.dagger2Verision"
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger2Verision"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
+    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
 }
