--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
     ext {
         kotlin_version = "1.3.72"
         dagger2Verision = "2.31.2"
+        retrofitVersion = "2.9.0"
+        gsonVersion = "2.8.6"
     }
     repositories {
         google()
