--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         fragmentKtxVersion = "1.2.5"
         navigationVersion = '2.2.0'
         lifecycle_version = "2.2.0"
+        rxVersion = "2.1.1"
     }
     repositories {
         google()
