--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     //Dagger2
     implementation "com.google.dagger:dagger:$rootProject.dagger2Verision"
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger2Verision"
+    implementation "com.google.dagger:dagger-android:$rootProject.dagger2Verision"
+    implementation "com.google.dagger:dagger-android-support:$rootProject.dagger2Verision"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.dagger2Verision"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
@@ -72,7 +75,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
 
-    //Rx
     //Rx
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxVersion"
