home fragment listview 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,8 @@ dependencies {
     //Rx
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxVersion"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
 }
