--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         navigationVersion = '2.2.0'
         lifecycle_version = "2.2.0"
         rxVersion = "2.1.1"
+        glideVersion = "4.11.0"
     }
     repositories {
         google()
