--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
         lifecycle_version = "2.2.0"
         rxVersion = "2.1.1"
         glideVersion = "4.11.0"
+        junitVersion = "4.13.1"
+        mockkVersion = "1.10.5"
+        androidXTestVersion = "1.3.0"
     }
     repositories {
         google()
