--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     //Unit test
     testImplementation "junit:junit:$rootProject.junitVersion"
     testImplementation "androidx.test:core:$rootProject.androidXTestVersion"
+    testImplementation "androidx.arch.core:core-testing:$rootProject.archTestingVersion"
     testImplementation "io.mockk:mockk:$rootProject.mockkVersion"
 
     //UI test
