--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         junitVersion = "4.13.1"
         mockkVersion = "1.10.5"
         androidXTestVersion = "1.3.0"
+        archTestingVersion = "2.1.0"
     }
     repositories {
         google()
